# zshrug

./: COMPETITORS.txt  Cargo.toml  README.md  logo.kra
src/: cli.rs  config.rs  log.rs  main.rs  script.rs  storage.rs
src/storage/: mod.rs  state.rs
