[package]
edition = "2018"
publish = false
name = "zshrug"
version = "0.1.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "TODO"
license = "MIT"
repository = "https://github.com/dmitmel/zshrug.git"
homepage = "https://github.com/dmitmel/zshrug"
readme = "README.md"

[dependencies]
dirs = "1.0"
failure = "0.1"
md5 = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
