[package]
edition = "2018"
publish = false
name = "zshrug"
version = "0.1.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "TODO"
license = "MIT"
repository = "https://github.com/dmitmel/zshrug.git"
homepage = "https://github.com/dmitmel/zshrug"
readme = "README.md"

[dependencies]
clap = "2.0"
cluFlock = "0.1"
dirs = "1.0"
failure = "0.1"
globset = "0.4"
md5 = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
walkdir = "2.2"
